--- a/examples/code-generation/apps_taco.ipynb
+++ b/examples/code-generation/apps_taco.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "dataset = load_dataset(\"bespokelabs/sky-t1-taco-test-rejection-sampled-shreyas\")\n",
     "\n",
-    "dataset['train'][0]"
+    "dataset[\"train\"][0]"
    ]
   },
   {
@@ -84,11 +84,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "e2b_api_key = 'e2b_284fcead1e4d5bebf429df860f451b54e34ca423'\n",
-    "sandbox = Sandbox(api_key=e2b_api_key)\n",
-    "\n",
-    "\n"
+    "e2b_api_key = \"e2b_284fcead1e4d5bebf429df860f451b54e34ca423\"\n",
+    "sandbox = Sandbox(api_key=e2b_api_key)"
    ]
   },
   {
@@ -112,7 +109,7 @@
     "import re\n",
     "\n",
     "# Extract code between ```python and ``` tags\n",
-    "code_match = re.search(r'```python\\n(.*?)\\n```', dataset['train'][0]['deepseek_solution'], re.DOTALL)\n",
+    "code_match = re.search(r\"```python\\n(.*?)\\n```\", dataset[\"train\"][0][\"deepseek_solution\"], re.DOTALL)\n",
     "if code_match:\n",
     "    code = code_match.group(1)\n",
     "else:\n",
@@ -156,14 +153,11 @@
    "outputs": [],
    "source": [
     "class APPSCodeExecutor(curator.experimental.CodeExecutor):\n",
-    "\n",
     "    def function_name(self, row):\n",
-    "\n",
-    "        return row['function_name']\n",
+    "        return row[\"function_name\"]\n",
     "\n",
     "    def function_code(self, row):\n",
-    "        return row['deepseek_solution']\n",
-    "\n"
+    "        return row[\"deepseek_solution\"]"
    ]
   }
  ],
